[package]
name = "clickup-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
ureq = { version = "2.9.6", features = ["json"] }
url = "2.5.0"
